# dotfiles

./: .chezmoi.toml.tmpl  .clinerules  .gitignore  .gitmodules  .homesick_subdir  .homesickrc  .pre-commit-config.yaml  AGENTS.md  Brewfile  Brewfile.lock.json  LICENSE  LICENSE.txt  README.md  bash.sh  deploy.sh  fish.sh  init.sh  install.fish  install.sh  latexmkrc  link.sh  mise.toml  osx.sh  personal.sh  pyproject.toml  spacemacs  sudo  tmux.conf  zshenv  zshrc
.claude/: settings.local.json
.serena/: project.yml
config/: 02-allow-colord.conf  cadabra2.conf  com.googlecode.iterm2.plist  cuda-11.2.module  sshd_config  tcp4_ports  texlive.profile  wsl.conf
docs/: DEVELOPMENT.md  README.md  SECURITY.md  SETUP_BITWARDEN_AGE.md  STRUCTURE.md  TROUBLESHOOTING.md
home/: .bash_profile  .bashrc  .chezmoi.toml.tmpl  .chezmoiexternal.toml.tmpl  .chezmoiignore  .chezmoiignore.tmpl  .gitconfig  .hyper.js  .latexmkrc  .mackup.cfg  .spacemacs  .tigrc  .vimrc  .zshenv  .zshrc  _gitconfig  dot_Xmodmap  dot_bashrc  dot_gdbinit  dot_gitconfig.tmpl  dot_hyper.js  dot_latexmkrc  dot_mackup.cfg  dot_spacemacs  dot_tigrc  dot_tmux.conf  dot_vimrc  dot_wslconfig.tmpl  dot_xsessionrc  dot_zshenv  dot_zshrc  dot_zshrc.tmpl  encrypted_dot_claude.json.age
images/: Makefile  clion.dockerfile  clion.yml  py37pip.dockerfile  ubuntu.dockerfile
installer/: Brew_essence.lock.json  Brewfile  Brewfile.lock.json  brew_essence.rb  brew_essence.rb.lock.json  brew_mas_cask.rb  brew_osx.rb  brew_others.rb  brew_shell.rb  cmake_install.sh  cpp.sh  cuda.sh  develop.sh  docker.sh  homebrew.sh  osx.sh  (+12 more)
(+338 files in other folders)
