[project]
name = "dotfiles"
version = "0.1.0"
description = "Dotfiles for personal configuration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keypirinha-stub",
    "pre-commit>=4.3.0",
    "yamllint>=1.35.1",
]

[tool.uv.sources]
keypirinha-stub = { git = "https://github.com/applejxd/keypirinha-stub.git" }
